--- a/src/sass/layout/_buy-now-modal.scss
+++ b/src/sass/layout/_buy-now-modal.scss
@@ -5,6 +5,8 @@
   width: 100%;
   height: 100%;
 
+  z-index: 998;
+
   overflow-y: scroll;
 
   padding: 15px;
@@ -26,6 +28,8 @@
 
 .modal-buy-now {
   position: relative;
+
+  z-index: 999;
 
   width: 100%;
   padding-bottom: 20px;
