--- a/src/sass/layout/_mobile-menu.scss
+++ b/src/sass/layout/_mobile-menu.scss
@@ -1,11 +1,11 @@
-.block {
-    display: block;
-  }
+// .block {
+//     display: block;
+//   }
   
   
-  .mobile__block {
-    display: none;
-  }
+//   .mobile__block {
+//     display: none;
+//   }
   
 
 
