--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -1,18 +1,20 @@
- <!--mobile menu -->
-<div class="mobile__block block">
+
+     <!--mobile menu -->
+<div class="mobile__block ">
     <div class="container mobile__container">
     
       
       <button type="button" class="button__open" >
         <svg class="" width="30" height="30">
-          <use href="./src/images/icons/icons.svg#icon-Burger">
+          <use href="./images/icons/icons.svg#icon-Burger">
       
           </use>
         </svg>
       </button>
       <div class="mobile__menu">
+        <button class="btn__header" type="button">Buy now</button>
         <nav class="navigation">    
-          <button class="btn__header" type="button">Buy now</button>
+          
               
                 
             <ul class="nav__list">
@@ -38,7 +40,7 @@
         
         <button type="button" class="button__close">
           <svg class="" width="30" height="30">
-            <use href="./src/images/icons/icons.svg#icon-close">
+            <use href="./images/icons/icons.svg#icon-close">
         
             </use>
           </svg>
