--- a/src/partials/read-more-modal.html
+++ b/src/partials/read-more-modal.html
@@ -1,6 +1,6 @@
-<div class="temporary__abouts">
+<!-- <div class="temporary__abouts">
   <button type="button" class="btn-about">press here</button>
-</div>
+</div> -->
 
 <div class="overlay overlay--off">
   <div class="readmore__modal">
