--- a/src/partials/read-more-modal.html
+++ b/src/partials/read-more-modal.html
@@ -1,12 +1,12 @@
 <div class="overlay overlay--off">
-  <div class="readmore__modal">
-    <p class="readmore__title">How is milk made?</p>
-    <p class="readmore__text">Pasteurisation</p>
-    <p class="readmore__text">Homogenisation</p>
-    <p class="readmore__text">Ultrafiltration</p>
-    <p class="readmore__text">Reverse osmosis</p>
-    <p class="readmore__text">Ultra osmosis</p>
-    <p class="readmore__text">Spray drying</p>
-    <p class="readmore__text">Permeate</p>
-  </div>
+  <ul class="readmore__modal">
+    <li class="readmore__title">How is milk made?</li>
+    <li class="readmore__text">Pasteurisation</li>
+    <li class="readmore__text">Homogenisation</li>
+    <li class="readmore__text">Ultrafiltration</li>
+    <li class="readmore__text">Reverse osmosis</li>
+    <li class="readmore__text">Ultra osmosis</li>
+    <li class="readmore__text">Spray drying</li>
+    <li class="readmore__text">Permeate</li>
+  </ul>
 </div>
