--- a/src/sass/layout/_read-more-modal.scss
+++ b/src/sass/layout/_read-more-modal.scss
@@ -84,8 +84,8 @@
   transition: transform 400ms ease-in;
 }
 
-.btn-about {
-  display: block;
-  width: 100px;
-  margin: auto;
-}
+// .btn-about {
+//   display: block;
+//   width: 100px;
+//   margin: auto;
+// }
