--- a/src/sass/layout/_read-more-modal.scss
+++ b/src/sass/layout/_read-more-modal.scss
@@ -58,13 +58,23 @@
   border-radius: 24px;
   box-shadow: 9px 10px 16px 11px rgba(128, 0, 0, 0.6);
 
-  &:hover {
+  //   &:hover {
+  //     transform: translate(-50%, -50%) scale(1, 1) perspective(400px) rotateY(180deg);
+  //     box-shadow: -9px 10px 16px 11px rgba(128, 0, 0, 0.6);
+  //   }
+
+  //   &:hover .readmore__text,
+  //   &:hover .readmore__title {
+  //     transform: rotateY(180deg);
+  //   }
+
+  .overlay:hover & {
     transform: translate(-50%, -50%) scale(1, 1) perspective(400px) rotateY(180deg);
     box-shadow: -9px 10px 16px 11px rgba(128, 0, 0, 0.6);
   }
 
-  &:hover .readmore__text,
-  &:hover .readmore__title {
+  .overlay:hover & .readmore__text,
+  .overlay:hover & .readmore__title {
     transform: rotateY(180deg);
   }
 }
@@ -83,9 +93,3 @@
   text-align: center;
   transition: transform 400ms ease-in;
 }
-
-// .btn-about {
-//   display: block;
-//   width: 100px;
-//   margin: auto;
-// }
