--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -9,8 +9,8 @@
                 <source srcset="./images/img/p5-tab_1x.png 768w, ./images/img/p5-tab_2x.png 1536w"
                     media="(min-width:768px)" sizes="(min-width:768px) 768px, 1536px">
                 <source srcset="./images/img/p5-mob_1x.png 320w, ./images/img/p5-mob_2x.png 640w"
-                    media="(min-width:320px)" sizes="(min-width:320px) 320px, 640px">
-                <img src="./images/img/p5-desk_1x.png" alt="gallery">
+                    media="(max-width:767px)" sizes="(min-width:320px) 320px, 640px" >
+                <img src="./images/img/p5-desk_1x.png" alt="gallery" class="section__gallery">
             </picture>
         </div>
     </div>
