--- a/src/sass/layout/_gallery.scss
+++ b/src/sass/layout/_gallery.scss
@@ -11,3 +11,8 @@
             #ffff 60%,
             #FFF5F6 40%)
 }
+.section__gallery{
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+}
