--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -1,20 +1,112 @@
-<section class="hero-header">
-<nav class="nav">
-    <a href="" class="logo">
-        <img srcset="./images/img/logo_1x.png 1x, ./images/img/logo_2x.png 2x" src="./images/img/logo_1x.png" alt="Icecream logo" width="199" height="50">
-    </a>
-    <button type="button" class="menu-open-btn btn">
-        <svg class="#" width="20" height="12">
-          <use href="./images/icons/icons.svg#icon-Burger"></use>
-        </svg>
-</button>
-</nav>
-<h1 class="hero-title">ice cream made with <span class="hero-title__current">passion</span></h1>
-<svg class="hero-ellipse" width="346" height="344">
-    <use href="./images/icons/icons.svg#icon-ellipse"></use>
-</svg>
-<div class="button-wrap">
-    <button type="button" class="hero-primary-btn btn">Products</button>
-    <button type="button" class="hero-secondary-btn btn">How it's made</button>
+<div class="hero-header-wrap">
+    <section class="hero-header">
+    <nav class="nav">
+        <a href="" class="logo">
+            <img srcset="./images/img/logo_1x.png 1x, ./images/img/logo_2x.png 2x" src="./images/img/logo_1x.png" alt="Icecream logo" width="199" height="50">
+        </a>
+        <ul class="nav__menu">
+            <li class="nav__menu-item"><a class="nav__menu-link nav__menu-link--current" href="#">Home</a></li>
+            <li class="nav__menu-item"><a class="nav__menu-link" href="#">About us</a></li>
+            <li class="nav__menu-item"><a class="nav__menu-link" href="#">How it's made</a></li>
+            <li class="nav__menu-item"><a class="nav__menu-link" href="#">Our products</a></li>
+            <li class="nav__menu-item"><a class="nav__menu-link" href="#">Contact</a></li>
+        </ul>
+    <button type="button" class="btn__header btn">Buy now</button>
+    </nav>
+    <h1 class="hero-title">ice cream made with <span class="hero-title__current">passion</span></h1>
+    <ul class="hero-numbers">
+        <li class="hero-numbers__item">16
+            <p class="hero-numbers__text">cafes</p>
+        </li>
+        <li class="hero-numbers__item">23
+            <p class="hero-numbers__text">food trucks</p>
+        </li>
+    </ul>
+    <p class="hero__slogan">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
+    <div class="picture-wrap">
+        <picture class="pink-ellipse">
+            <source srcset="./images/img/h4-ellipse-desk_1x.png 1x,
+            ./images/img/h4-ellipse-desk_2x.png 2x"
+            media="(min-width: 1280px)"
+            />
+            <source srcset="./images/img/h4-ellipse-tab_1x.png 1x,
+            ./images/img/h4-ellipse-tab_2x.png 2x"
+            media="(min-width: 768px)"
+            />
+            <source srcset="./images/img/h4-ellipse-desk_1x.png 1x,
+            ./images/img/h4-ellipse-desk_2x.png 2x"
+            media="(max-width: 767px)"
+            />
+          <img
+            src="./images/img/h4-ellipse-desk_1x.png"
+            alt="Pink Ellipse"
+          />
+        </picture>
+    <picture class="icecream-cone">
+        <source srcset="./images/img/h1-desk_1x.png 1x,
+        ./images/img/h1-desk_2x.png 2x"
+        media="(min-width: 1280px)"
+        />
+        <source srcset="./images/img/h1-tab_1x.png 1x,
+        ./images/img/h1-tab_2x.png 2x"
+        media="(min-width: 768px)"
+        />
+        <source srcset="./images/img/h1-mob-1x.png 1x,
+        ./images/img/h1-mob-2x.png 2x"
+        media="(max-width: 767px)"
+        />
+      <img
+        src="./images/img/h1-desk_1x.png"
+        alt="Ice Cream Cone"
+      />
+    </picture>
+    <picture class="milk-jug">
+        <source srcset="./images/img/h2-desk_1x.png 1x,
+        ./images/img/h2-desk_2x.png 2x"
+        media="(min-width: 1280px)"
+        />
+        <source srcset="./images/img/h2-tab_1x.png 1x,
+        ./images/img/h2-tab_2x.png 2x"
+        media="(min-width: 768px)"
+        />
+      <img
+        src="./images/img/h2-desk_1x.png"
+        alt="Jug of milk"
+      />
+    </picture>
+    <picture class="girl-icecream">
+        <source srcset="./images/img/h3-desk_1x.png 1x,
+        ./images/img/h3-desk_2x.png 2x"
+        media="(min-width: 1280px)"
+        />
+        <source srcset="./images/img/h3-tab_1x.png 1x,
+        ./images/img/h3-tab_2x.png 2x"
+        media="(min-width: 768px)"
+        />
+      <img
+        src="./images/img/h3-desk_1x.png"
+        alt="Girl eats ice cream"
+      />
+    </picture>
+    <picture class="arrow-right">
+        <source srcset="./images/img/h5-arrow-right-desk_1x.png 1x,
+        ./images/img/h5-arrow-right-desk_2x.png 2x"
+        media="(min-width: 1280px)"
+        />
+        <source srcset="./images/img/h5-arrow-right-tab_1x.png 1x,
+        ./images/img/h5-arrow-right-tab_2x.png 2x"
+        media="(min-width: 768px)"
+        />
+      <img
+        src="./images/img/h5-arrow-right-desk_1x.png"
+        alt="arrow right sign"
+      />
+    </picture>
+    </div>
+    <ul class="button-wrap">
+       <li><button type="button" class="hero-primary-btn btn">Products</button></li>
+       <li><button type="button" class="hero-secondary-btn btn">How it's made</button></li>
+    </ul>
+    
+    </section>
 </div>
-</section>
