--- a/src/sass/utils/_vars.scss
+++ b/src/sass/utils/_vars.scss
@@ -8,7 +8,10 @@
     --base-bg-color: #E5E5E5;
     --secondary-bg-color: #FFF5F6;
     --underline-color: #E1E1E1;
-
+    --bg-cart-cream:   #FFB8CA;
+    --bg-cart-coffee: #F0D1A5;
+    --bg-cart-milkshakes: #C2E297;
+   
     --btn-accent-bg-color: #ECEBEB;
     --btn-hero-border-radius: 20px;
     --btn-border-radius: 22px;
