--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -14,12 +14,14 @@
     <button type="button" class="btn__header btn">Buy now</button>
     </nav>
     <h1 class="hero-title">ice cream made with <span class="hero-title__current">passion</span></h1>
-    <ul class="hero-numbers">
-        <li class="hero-numbers__item">16
-            <p class="hero-numbers__text">cafes</p>
+    <ul class="hero-advantages">
+        <li class="hero-advantages__item">
+            <p class="hero-advantages__numbers">16</p>   
+            <p class="hero-advantages__text">cafes</p>
         </li>
-        <li class="hero-numbers__item">23
-            <p class="hero-numbers__text">food trucks</p>
+        <li class="hero-advantages__item">
+            <p class="hero-advantages__numbers">23</p> 
+            <p class="hero-advantages__text">food trucks</p>
         </li>
     </ul>
     <p class="hero__slogan">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
@@ -102,6 +104,20 @@
         alt="arrow right sign"
       />
     </picture>
+    <img
+    class="white-ellipse"
+    srcset="./images/img/h6-ellipse-desk_1x.png 1x,
+     ./images/img/h6-ellipse-desk_2x.png 2x"
+    src="./images/img/h6-ellipse-desk_1x.png"
+    alt="White ellipse"
+    />
+    <img
+    class="white-ellipse-second"
+    srcset="./images/img/h6-ellipse-desk_1x.png 1x,
+     ./images/img/h6-ellipse-desk_2x.png 2x"
+    src="./images/img/h6-ellipse-desk_1x.png"
+    alt="White ellipse"
+    />
     </div>
     <ul class="button-wrap">
        <li><button type="button" class="hero-primary-btn btn">Products</button></li>
