--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,5 +1,5 @@
 <!-- Contacts -->
-<section class="section-contacts">
+<section class="section-contacts"><a href="" name="contacts"></a>
   <div class="container">
     <h2 class="section__title visually-hidden">Our contacts</h2>
     <div class="contacts">
