--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -1,19 +1,19 @@
 <div class="hero-header-wrap">
     <section class="hero-header">
+        <h1 class="hero-title">ice cream made with <span class="hero-title__current">passion</span></h1>
     <nav class="nav">
         <a href="" class="logo">
             <img srcset="./images/img/logo_1x.png 1x, ./images/img/logo_2x.png 2x" src="./images/img/logo_1x.png" alt="Icecream logo" width="199" height="50">
         </a>
         <ul class="nav__menu">
-            <li class="nav__menu-item"><a class="nav__menu-link nav__menu-link--current" href="#">Home</a></li>
-            <li class="nav__menu-item"><a class="nav__menu-link" href="#">About us</a></li>
-            <li class="nav__menu-item"><a class="nav__menu-link" href="#">How it's made</a></li>
-            <li class="nav__menu-item"><a class="nav__menu-link" href="#">Our products</a></li>
-            <li class="nav__menu-item"><a class="nav__menu-link" href="#">Contact</a></li>
+            <li class="nav__menu-item"><a class="nav__menu-link nav__menu-link--current" href="">Home</a></li>
+            <li class="nav__menu-item"><a class="nav__menu-link" href="#about-us">About us</a></li>
+            <li class="nav__menu-item"><a class="nav__menu-link" href="#how-it's-made">How it's made</a></li>
+            <li class="nav__menu-item"><a class="nav__menu-link" href="#products">Our products</a></li>
+            <li class="nav__menu-item"><a class="nav__menu-link" href="#contacts">Contact</a></li>
         </ul>
     <button type="button" class="btn__header btn">Buy now</button>
     </nav>
-    <h1 class="hero-title">ice cream made with <span class="hero-title__current">passion</span></h1>
     <ul class="hero-advantages">
         <li class="hero-advantages__item">
             <p class="hero-advantages__numbers">16</p>   
