--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,4 +1,4 @@
-<section class="about">
+<section class="about"><a href="" name="how-it's-made"></a>
     <div class="container">
         <p class="about__pre-title">tradition and love</p>
         <h2 class="about__title">how it’s made?</h2>
