--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,4 +1,4 @@
-<section class="section section--advantages-background section--advantages-padding">
+<section class="section section--advantages-background section--advantages-padding"><a href="" name="about-us"></a>
   <div class="container container--advantages-padding">
     <h2 class="section__title visually-hidden">Advantages</h2>
     <ul class="advantages">
