--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,4 +1,4 @@
-<section class="products">
+<section class="products"><a href="" name="products"></a>
   <div class="container">
   
     <p class="products__title-text">100% natural</p>
