--- a/src/sass/layout/_hero-header.scss
+++ b/src/sass/layout/_hero-header.scss
@@ -13,6 +13,7 @@
     padding-top: 8px;
     padding-right: 20px;
     padding-left: 20px;
+    overflow: hidden;
 
     @include media(480px) {
         width: 480px;
