--- a/src/sass/layout/_read-more-modal.scss
+++ b/src/sass/layout/_read-more-modal.scss
@@ -1,4 +1,5 @@
 .overlay {
+  //   pointer-events: all;
   position: fixed;
 
   opacity: 1;
@@ -22,7 +23,6 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  z-index: 1;
 
   display: flex;
   flex-direction: column;
@@ -58,15 +58,9 @@
   border-radius: 24px;
   box-shadow: 9px 10px 16px 11px rgba(128, 0, 0, 0.6);
 
-  //   &:hover {
-  //     transform: translate(-50%, -50%) scale(1, 1) perspective(400px) rotateY(180deg);
-  //     box-shadow: -9px 10px 16px 11px rgba(128, 0, 0, 0.6);
-  //   }
-
-  //   &:hover .readmore__text,
-  //   &:hover .readmore__title {
-  //     transform: rotateY(180deg);
-  //   }
+  &:hover {
+    cursor: default;
+  }
 
   .overlay:hover & {
     transform: translate(-50%, -50%) scale(1, 1) perspective(400px) rotateY(180deg);
