--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -20,3 +20,4 @@
 @import './layout/buy-now-modal';
 @import './layout/our-location-modal';
 @import './layout/read-more-modal';
+@import './layout/modal-franchise';
