--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -129,7 +129,7 @@
             <use href="./images/icons/icons.svg#icon-btn-vector-white"></use>
           </svg>
         </button>
-        <button type="button" class="btn cater-btn__franch">
+        <button type="button" class="btn cater-btn__franch" data-modal-franchise-open>
           Franchise
           <svg class="cater-btn__icons" width="8" height="16">
             <use href="./images/icons/icons.svg#icon-btn-vector-red"></use>
